# uolondon-cm3070-fp

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  research.ipynb  setup.cfg
.github/workflows/: python-package.yml
configs/: _final-lg.yml  _final-md.yml  _final-sm.yml  _mock.yml  a-mm-wav2vec2.yml  a-um-wav2vec2.yml  a-um-waveform.yml  adv-audio-wav2vec2-lr-5e-4.yml  adv-audio-wav2vec2.yml  adv-text-gpt2-lr-5e-2.yml  adv-text-gpt2-lr-5e-3.yml  adv-text-gpt2-lr-5e-4.yml  adv-text-gpt2.yml  adv-visual-retinaface.yml  baseline-a.yml  baseline-cce.yml  baseline-dice.yml  baseline-focal.yml  baseline-loss-dice-lr-5e-3.yml  baseline-loss-dice-lr-5e-4.yml  baseline-loss-dice.yml  baseline-only-audio.yml  baseline-only-text.yml  baseline-only-video.yml  baseline-only-visual.yml  baseline-r1.yml  baseline-t.yml  baseline-v.yml  baseline.yml  e01-gpt2-lr000001.yml  e01-gpt2-lr00001.yml  e01-gpt2-lr0001.yml  e01-gpt2-lr001.yml  e01-gpt2-lr01.yml  e01-gpt2.yml  final-i01-waveform-150Kx50.yml  final-i01-waveform-150Kx50_lr5e-4.yml  final-i02-waveform-150Kx256.yml  final-i02-waveform-150Kx768.yml  final-i03-waveform-200Kx256.yml  (+54 more)
dev/: eda.ipynb  local.ipynb  mlops  mlops.ipynb  modelling.ipynb
dev/configs/: baseline.yml
exps/: objective_1.ipynb  objective_2.ipynb  objective_3  objective_3.ipynb  objective_5.ipynb  objective_6.ipynb  objective_7.ipynb
src/hlm12erc/: __main__.py
src/hlm12erc/etl/: __init__.py  extraction.py  loading.py  transformation.py  utils.py
src/hlm12erc/etl/domain/: filepath_recursive_discoverer.py  kaggle_dataset.py  kaggle_dataset_downloader.py  kaggle_zip_decompressor.py  recursive_filepath_discoverer.py  video_filename_deducer.py  video_to_audio_track_transformer.py  video_to_image_mosaic_transformer.py  zip_decompressor.py
src/hlm12erc/modelling/: __init__.py  erc_config.py  erc_config_loader.py  erc_data_collator.py  erc_emb.py  erc_emb_audio.py  erc_emb_text.py  erc_emb_visual.py  erc_feedforward.py  erc_fusion.py  erc_label_encoder.py  erc_loss.py  erc_model.py  erc_output.py  erc_storage.py  erc_storage_links.py
src/hlm12erc/modelling/retinaface/: __init__.py  detection.py  model.py  utils_prior_box.py  utils_py_cpu_nms.py
src/hlm12erc/serving/: __init__.py  cli.py  cli_arxiv.py  cli_erc.py  cli_etl.py
src/hlm12erc/training/: __init__.py  erc_config_formatter.py  erc_config_loader.py  erc_data_collator.py  erc_data_sampler.py  erc_evaluator.py  erc_factory_trainer_job.py  erc_factory_trainer_ta.py  erc_metric_calculator.py  erc_path.py  erc_trainer.py  erc_trainer_batch.py  erc_trainer_job_batch.py  erc_trainer_job_triplet.py  meld.py  meld_dataset.py  meld_preprocessor_audio.py  meld_preprocessor_video.py  meld_preprocessor_visual.py  meld_record.py  meld_record_preprocessor_audio.py  meld_record_preprocessor_text.py  meld_record_preprocessor_visual.py  meld_record_reader.py
tests/etl/: test_extraction.py  test_extraction_decompressor.py  test_extraction_downloader.py  test_loading.py  test_transformation.py  test_transformation_audio.py  test_transformation_video.py
tests/etl/domain/: test_filepath_recursive_discoverer.py  test_kaggle_dataset.py  test_kaggle_dataset_downloader.py  test_kaggle_zip_decompressor.py  test_transformation_video.py  test_video_filename_deducer.py  test_video_to_audio_track_producer.py  test_video_to_audio_track_transformer.py  test_video_to_image_mosaic_producer.py  test_video_to_image_mosaic_transformer.py
tests/fixtures/: sample.csv  t-um-glove.json
tests/modelling/: test_erc_config.py  test_erc_config_loader.py  test_erc_emb_audio.py  test_erc_emb_text.py  test_erc_emb_visual.py  test_erc_feedforward.py  test_erc_fusion.py  test_erc_label_encoder.py  test_erc_loss.py  test_erc_model.py
tests/training/: test_erc_config_formatter.py  test_erc_data_collator.py  test_erc_data_sampler.py  test_erc_evaluator.py  test_erc_factory_trainer_job.py  test_erc_factory_trainer_ta.py  test_erc_metric_calculator.py  test_erc_trainer_job_triplet.py  test_meld_dataset.py  test_meld_preprocessor_audio.py  test_meld_preprocessor_text.py  test_meld_preprocessor_visual.py  test_meld_record_preprocessor_audio.py  test_meld_record_preprocessor_text.py  test_meld_record_preprocessor_visual.py  test_meld_record_reader.py  test_trainer_job_triplet.py
wandb/: latest-run
wandb/run-20230802_174434-cdsp7odq/: run-cdsp7odq.wandb
wandb/run-20230802_174434-cdsp7odq/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
(+7 files in other folders)
