[metadata]
name = cm3070_fp
version = attr: cm3070_fp.VERSION
author = Hudson Mendes
author_email = hlm12@student.london.ac.uk
description = Final Project from University of London
long_description = file: README.md, LICENSE
keywords = university-of-london
license = copyright

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =src
python_requires = >=3.10
install_requires =

[options.package_data]

[options.extras_require]
data =
     h5py
     validators
     tqdm
     numpy
     argparse
     requests

dev =
    coverage>=7.2.3
    pytest>=7.3.1
    isort>=5.12.0
    flake8

[options.packages.find]
include =
    ./src
    ./lib