[metadata]
name = hlm12erc
version = attr: hlm12erc.VERSION
author = Hudson Mendes
author_email = hlm12@student.london.ac.uk
description = Final Project from University of London
long_description = file: README.md, LICENSE
keywords = university-of-london
license = copyright

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =src
python_requires = >=3.10
install_requires =

[options.package_data]

[options.extras_require]
modeling =
    # no dependencies yet

training =
    kaggle>=1.5.13
    tqdm>=4.65.0
    pandas>=2.0.1
    matplotlib
    scipy

serving =
    fire>=0.5.0
    tqdm>=4.65.0
    requests>=2.31.0
    feedparser>=6.0.10

all =
    %(modeling)s
    %(training)s
    %(serving)s

[options.packages.find]
include =
    ./src
