[metadata]
name = hlm12erc
version = attr: hlm12erc.VERSION
author = Hudson Mendes
author_email = hlm12@student.london.ac.uk
description = Final Project from University of London
long_description = file: README.md, LICENSE
keywords = university-of-london
license = copyright

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =src
python_requires = >=3.10
install_requires =
    torch>=2.0.1
    torchtext>=0.15.2
    torchvision>=0.15.2
    transformers>=4.30.2
    nltk>=3.8.1
    Pillow>=10.0.0
    scikit-learn>=1.3.0

[options.package_data]

[options.extras_require]
# development
dev =
    pre-commit>=3.3.3
    black[jupyter]>=23.7.0
    isort>=5.12.0

test =
    pytest>=7.4.0

# mlops
etl =
    kaggle>=1.5.13
    tqdm>=4.65.0
    pandas>=2.0.1
    google-cloud-storage>=2.10.0
    moviepy>=1.0.3

modeling =
    # modelling dependencies are cross cutting
    # and are all defined in the `install_requires` section

training =
    pandas>=2.0.1
    PyYAML>=6.0
    transformers[torch]>=4.30.2

serving =
    fire>=0.5.0

all =
    %(dev)s
    %(test)s
    %(etl)s
    %(modeling)s
    %(training)s
    %(serving)s

[options.packages.find]
include =
    ./src
